<resources>
    <string name="app_name">ZYQigong</string>
    <string name="app_description">Becoming Awareness</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_level_1">Level 1</string>
    <string name="navigation_drawer_level_2">Level 2</string>
    <string name="navigation_drawer_level_3">Level 3</string>
    <string name="navigation_drawer_exercises">Exercises</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_feedback">Feedback</string>

    <!-- Strings related to Settings -->
    <string name="fragment_settings">Settings</string>
    <string name="pref_header_initial_reminder">Initial reminder</string>
    <string name="pref_header_constant_reminder">Constant reminder</string>
    <string name="pref_header_final_reminder">Final reminder</string>

    <string name="pref_reminder_show_notification">Show notifications</string>
    <string name="pref_reminder_vibrate">Vibrate</string>

    <!-- Help -->
    <string name="fragment_help_text" translatable="false">"text here"
    </string>
    <string name="fragment_help_version">Studio \"Hyperborean cyclone\"\nVersion 0.1</string>
    <string name="fragment_help">Help</string>

    <!-- Feedback -->
    <string name="feedback_send_email">Send email</string>

    <!-- Fragment Practice -->
    <string name="fragment_practice_title">Practice</string>

    <!-- Fragment Practice Description -->
    <string name="fragment_practice_description_title">Description</string>

    <!-- Fragment Exercises -->
    <string name="fragment_exericses_title">Exercises</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, sale viris intellegam usu eu, persius patrioque sea at. Ne salutandi repudiandae mei, cu mollis accusam mediocrem mea. Altera dolorem praesent at vis. Torquatos philosophia ad quo. Omnis adipiscing has ea, mel no hinc iudico percipit.</string>

    <!-- Exercises -->
    <string name="step00_warmup00">
        1 Встать прямо, ноги на ширине плеч, ступни параллельны, тело расслаблено.\n
        2 Сложенные вместе ладони поднять до уровня груди.\n
        3 Открыть ладони к себе, вращательным движением на себя опустить кисти рук пальцами вниз таким образом, чтобы кисти сомкнулись тыльной стороной.\n
        4 Продолжить вращение, открыв ладони от себя, затем, сомкнув их, вернуть в исходное положение. Выполнять 8 раз.\n
        5 Повторить вращение рук в противоположном направлении, от себя, еще 8 раз.\n
    </string>
</resources>
